fix: change projects url

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         <li>responsive</li>
                                         <li>flexbox</li>
                                     </ul>
-                                    <a href="https://upbeat-northcutt-457a07.netlify.com/" class="cta">View Project</a>
+                                    <a href="https://moiseenokv.github.io/projects/repair-design-project/" class="cta">View Project</a>
                                 </div>
                                 
                             </div>
